--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,6 +48,7 @@
                             <li><a href="nav_categorias/un_tema.html">Un Tema</a></li>
                         </ul>
                     </li>
+                    
                     <li><a <%=link_to "Blog", articles_path %> </li>
                     <li><a <%=link_to "Contacto", contact_path %> </li>
                     
@@ -98,7 +99,7 @@
 <br><br>
 
 
-                <!-- aqui van los post !-->
+                <!-- aqui van los post
             
         </section>
         <aside class="col-md-3 hidden-xs hidden-sm">
@@ -111,7 +112,7 @@
         </aside>
     </div>
 </section>
-
+ !-->
 <footer>
     <div class="row container ">
         <div class="col-xs-6">
