--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1,27 +1,45 @@
 .navbar {
 	margin-bottom: 0; 
+	background: #051825 !important;
 }
 .jumbotron {
-	color: #ECF3FC;
-    background: #2C2D31;
+	color: #2E6678 !important;
+    background: #042A3E !important;
 	padding: 20px 0;
 }
-
-footer {
-	background: #2C2D31;
-	color: #ECF3FC;
+.small{
+	color: #2E6678 !important;
+}
+.footer {
+	background: #051825 !important;
+	color: #3C99A5 !important;
 	padding: 5px 0;
-	
-
-.main{
+	bottom: 0;
+}
+.be-big {
+	font-size: 3em ; 
+}
+.be-small{
+	font-size: 11px;
+}
+.underline{
+	text-decoration: underline;
+}
+.black{
+	color: #042A3E !important;
+}
+.main {
     margin-top: 20px;
     margin-bottom: 20px;
 }
-.top-space{
-    margin-top: 1em;
+.top-space {
+    margin-top: 2em ;
 }
 .field {
     margin-top: 1em;
+}
+.grey{
+	color: #616161;
 }
 .relative{
 	position: relative;
@@ -36,6 +54,15 @@ footer {
 	background-position: center;
 	background-size: cover;
 }
-text-center{
+.text-justify{
+	text-align: justify;
+}
+.text-center{
 	text-align: center;
+}
+.text-right{
+	text-align: right;
+}
+.bottom-space{
+	margin-bottom: 2em;
 }
