--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -21,7 +21,7 @@
     </div>
     <br>
     <div class="field">
-        <%= f.submit "Guardar", class:"btn footer "%>
+        <%= f.submit "Guardar", class:"btn  "%>
     </div>
 <%end%>
 
