--- a/app/views/welcome/contact.html.erb
+++ b/app/views/welcome/contact.html.erb
@@ -1,16 +1,16 @@
 
 <header>
     
-    <section class="main container">
+    <section class="main text-center container">
         <div class="row">
                     
             <H4>CONTACTA CON NOSOTROS</H4>
             <div class= "contact ">
-            <H2 class="container">dplb.mx@gmail.com</H2>
+            <H1 class="container">dplb.mx@gmail.com</H1>
             </div> 
 
             <br>
-
+<!-- 
             <form action="#" name="formulario" method="get">
                 <input type="text" name="nombre" id="nombre" maxlength="30" placeholder="Nombre:" >
                 <br><br>
@@ -23,7 +23,7 @@
                     
                 <input type="submit" id="btn" name="btn" value="Enviar">                            
             </form>
-            <br>    
+            <br>  -->  
 
         </div>  
     </section>
