--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,5 @@
-<div>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/ZloUwNwcfPc" frameborder="0" allowfullscreen></iframe>   
+<div class="embed-responsive embed-responsive-16by9">
+  <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/ZloUwNwcfPc"></iframe>
 </div>
+
+<br>
