--- a/app/views/articles/_comments.html.erb
+++ b/app/views/articles/_comments.html.erb
@@ -1,16 +1,17 @@
 <div class="grey top-space">
     <div class="row">
-        <div class="col-xs-6">
-            Comenta
+        <div class="col-xs-12">
+            <h4>Comenta</h4>            
         </div>
-        <div class="col-xs-6">
+        <div class="col-xs-12 text-right">
             <%= @article.comments.count%> comentario(s)
         </div>
     </div>
-    <div>
+    <div class="text-cente col-xs-12  top-space >
         <%= render "comments/form" %>
     </div>
-    <div class="top-space">
+    
+    <div class="text-cente col-xs-5 r top-space ">
         <%= render @article.comments %>
     </div>
 </div>
