--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,19 +1,18 @@
-<div class="container-fluid">    
-<h1> Articulos</h1>
+<div class="container-fluid text-center">    
+<h1 class="grey"> Articulos</h1>
     <div class="row">
         <% @articles.each do |article| %>
-            <div class="col-md-4 top-space">
+            <div class=" col-md-4 top-space">
                 <div class="box relative article-height">
                     <div class="absolute article-height background-cover" style="background:url(<%= article.cover.url(:thumb) %>);top:0px;left:0px;width:100%;">
                     </div>
-                        <div class="absolute article-height background-cover" style="background:rgba(0,0,0,0.0);top:0px;left:0px;width:100%;">
-                    </div>
-                    
-                    <div class="relative white text-center">
-                        <h2><%= link_to article.title, article %></h2>
-                        <p>
-                            <%= truncate(article.body,length:60) %> 
-                        </p>
+                        <div class="absolute article-height background-cover" style="background:rgba(0,0,0,0.5);top:0px;left:0px;width:100%;">
+                    </div>         
+                    <div class="relative  text-center">
+                            <h2 class="blue" ><%=link_to article.title, article, class:"title" %></h2><br>
+                            <p class="be-grey text-center">
+                                <%= truncate(article.body ,length:50,escape: false ) %> 
+                            </p> 
                     </div>
                 </div>
                 
