--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -12,10 +12,10 @@
   <% end %>
   
   <div class="field">
-    <%= f.label :body %><br>
+    <%= f.label :body, class:"hidden" %><br>
     <%= f.text_area :body %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "Enviar"%>
   </div>
 <% end %>
