--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,9 +10,9 @@
 <body>
 
 <header>
-    <nav class="navbar navbar-inverse navbar-static-top " role=navigation>
+    <nav class="navbar navbar-static-top navbar-inverse  " role=navigation>
         <div class="container">
-            <div class="navbar-header col-xs-6">
+            <div class="navbar-header text-center col-xs-5 col-md-6">
 
                 <button type="button" class="navbar-toggle collapsed " data-toggle="collapse" data-target="#navegacion">
                 
@@ -30,7 +30,6 @@
                 
                 <a href="#"></a>
                 
-                
             </div>
             
             
@@ -41,18 +40,22 @@
                     <li><a <%=link_to "Contacto", contact_path %> </li>
                     
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">
-                            Admin <span class="caret"></span>
-                        </a>
-                        <ul class="dropdown-menu" role="menu">
-                            <li><a <%=link_to "New Post", new_article_path %> </li>
-                            <li class="divider"></li>
-                            <li><a <%=link_to "Dashboard", dashboard_path %> </li>
-                        </ul>
+
+                        <%if user_signed_in? and current_user.is_admin?   %>
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">
+                                Admin <span class="caret"></span>
+                            </a>
+                            <ul class="dropdown-menu" role="menu">
+                                <li><a <%=link_to "New Post", new_article_path %> </li>
+                                <li class="divider"></li>
+                                <li><a <%=link_to "Dashboard", dashboard_path %> </li>
+                            </ul>
+                        <%end%> 
+                        
                     </li>
                     
                     <li class="text-right">      
-                        <%if user_signed_in?%>
+                        <%if user_signed_in? %>
                             <li>
                                 <%= link_to "Cerrar Sesion", destroy_user_session_path, method: :delete %> 
                             </li>
@@ -72,12 +75,15 @@
     </nav>
 </header>
 
-<section class="jumbotron">
-    <div class="container">
-        <h1> &#60;D/B&#62; <small class="small">Development pa' la Banda</small></h1>
-    </div>
-</section>
+<section class="baner">
+        <div class="row">
+            <div class="thumbnail col-xs-12">
+                <%= image_tag "bannerdb.jpg"  %> 
+            </div>            
+        </div>
 
+
+</section>
 
 
 <section class="main container">
