actualizacion del ajax

--- a/app/views/articles/_comments.html.erb
+++ b/app/views/articles/_comments.html.erb
@@ -7,7 +7,7 @@
             <%= @article.comments.count%> comentario(s)
         </div>
     </div>
-    <div class="text-cente col-xs-12  top-space >
+    <div class="text-cente col-xs-12  top-space" >
         <%= render "comments/form" %>
     </div>
     
