--- a/app/views/articles/_comments.html.erb
+++ b/app/views/articles/_comments.html.erb
@@ -11,7 +11,7 @@
         <%= render "comments/form" %>
     </div>
     
-    <div class="text-cente col-xs-5 r top-space ">
+    <div class="text-cente col-xs-5 r top-space " id="comments-box">
         <%= render @article.comments %>
     </div>
 </div>
