--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,14 @@
-<div class="embed-responsive embed-responsive-16by9">
-  <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/ZloUwNwcfPc"></iframe>
-</div>
+<h1><i class="fa fa-heart "></i></h1>
 
-<br>
+<h2 class="text-justify">Intro de D/B, <a href="https://www.youtube.com/channel/UCUSRKM3TMIgd_c7r2xf-sAA"> entra al canal</a> Un blog donde hablamos de desarrollo y todas las cosas que nos pasan mientras intentamos crear un producto.</h2>
+
+<div class="container text-center">
+  <div class="row">
+    <div class="col-sm-12">
+      <h2>Hablando de guithub</h2>
+<div class="embed-responsive embed-responsive-4by3">
+    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/ZloUwNwcfPc" frameborder="0" allowfullscreen></iframe>
+</div>
+    </div>
+  </div>
+</div>
