--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,10 +9,10 @@
 </head>
 <body class="content ">
 
-<header>
+<header class="col-xs-5 col-md-6">
     <nav class="navbar navbar-static-top navbar-inverse  " role=navigation>
         <div class="container">
-            <div class="navbar-header col-xs-5 col-md-6 text-center ">
+            <div class="navbar-header text-center col-xs-5 col-md-6 text-center ">
 
                 <button type="button" class="navbar-toggle collapsed " data-toggle="collapse" data-target="#navegacion">
                 
@@ -102,7 +102,7 @@
         </div>
         <div class=" col-xs-6">
             <ul class=" list-inline text-right">
-                 <li><a <%=link_to "inicio", index_path %> </li>
+                 
                  <li><a <%=link_to "Contacto", contact_path %> </li>
             </ul>
         </div>
