--- a/app/views/articles/_comments.html.erb
+++ b/app/views/articles/_comments.html.erb
@@ -4,7 +4,7 @@
             <h4>Comenta</h4>            
         </div>
         <div class="col-xs-12 text-right">
-            <%= @article.comments.count%> comentario(s)
+          <%= @article.comments.count%> comentario(s)
         </div>
     </div>
 
@@ -12,7 +12,7 @@
         <%= render "comments/form" %>
     </div>
     <div class="top-space text-center">
-    <%= will_paginate @comments %>
+    <%= will_paginate @comments , renderer: BootstrapPagination::Rails %>
     </div>
 
     <div class="text-cente col-xs-5 r top-space " id="comments-box">
