--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,16 +7,15 @@
   <%= csrf_meta_tags %>
   
 </head>
-<body class="content ">
+<body class="content">
 
-<header class="col-xs-5 col-md-6">
-    <nav class="navbar navbar-static-top navbar-inverse  " role=navigation>
+<header>
+    <nav class="navbar navbar-static-top navbar-inverse " role=navigation>
         <div class="container">
-            <div class="navbar-header text-center col-xs-5 col-md-6 text-center ">
+            <div class="navbar-header  text-right ">
 
-                <button type="button" class="navbar-toggle collapsed " data-toggle="collapse" data-target="#navegacion">
+                <button type="button" class="navbar-toggle text-center collapsed " data-toggle="collapse" data-target="#navegacion">
                 
-                 
                     <span class="sr-only">Desplegar / Ocultar Menu</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
