--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -13,9 +13,10 @@
   
   <div class="field">
     <%= f.label :body, class:"hidden" %><br>
-    <%= f.text_area :body %>
+    <%= f.text_area :body, class:" form-control", rows:"3"%>
   </div>
-  <div class="actions">
-    <%= f.submit "Enviar"%>
+  <br>
+  <div class="   text-center">
+    <%= f.submit "Enviar", class:"btn  btn-coment btn-primary "%>
   </div>
 <% end %>
