--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,34 +1,50 @@
-<div class="row">
+<div class="row  jumbotron">
+  <div class="main-container col-xs-12">
+    <div class="box">
+      <div classs="" >
+        <h1 class="  text-center col-xs-12">Crear Cuenta</h1>
+      </div> 
+      <div cloass="container form-group ">
+        <div class="text-center form-group">
+          <div class="main-container">
+            <div>
+              <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+                <%= devise_error_messages! %>
+            </div>
+              
+            <div class="field ">
+              <%= f.label :email, class:" col-xs-12 text-left" %><br />
+              <%= f.email_field :email, autofocus: true, class:"form-group col-xs-12"%>
+            </div>
+          
 
-<h2>Crear Cuenta</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+            <div class="field text-left">
+              <h5 ><%= f.label :password%>
+              <% if @minimum_password_length %>
+              (<%= @minimum_password_length %> caracteres minimo)</h5>
+              <% end %>
+              <%= f.password_field :password, autocomplete: "off", class:"form-group col-xs-12" %>
+            </div>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
+
+            <div class="field ">
+              <h5 class="text-left"><%= f.label :password_confirmation, class:"hidden col-md-4  col-xs-12 text-left" %> Confirmar Password </h5>
+              <%= f.password_field :password_confirmation, autocomplete: "off", class:"form-group col-xs-12"%>
+            </div>
+
+              <div class="box">
+                <div class="actions text-left col-xs-12 top-space ">
+                  <%= f.submit "Crear Cuenta", class:"btn btn-login btn-lg btn-block"  %>
+                </div>                
+              </div>
+            <% end %>
+            <div class="col-xs-12 btn-lg btn-login-1">
+              <%= render "devise/shared/links" %>
+            </div>
+          </div>  
+        </div>
+      </div>
+    </div>
   </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> caracteres minimo)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation, class:"hidden" %> Confirmar Password <br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-<br>
-  <div class="actions">
-    <%= f.submit "Crear Cuenta" %>
-  </div>
-<% end %>
-<br>
-<%= render "devise/shared/links" %>
- 
 </div>
-
