--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -3,17 +3,30 @@
 <% end -%>
 
 
+<div class="row">
+  <div class="box  ">
+    <div class=" col-xs-12 "> 
+      <div class=" btn-lg ">
 
-<div class="col-sx-6">
-	<%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-	  <%= link_to "Crear Cuenta", new_registration_path(resource_name) %><br />
-	<% end -%>
+        <div class="col-xs-6 " >
+          <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
+          <%= link_to "Crear Cuenta", new_registration_path(resource_name) %><br />
+          <% end -%>  
+        </div>
+              
+        <div class="col-xs-6 " >
+          <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
+            <%= link_to "Olvide mi contraseña", new_password_path(resource_name) %><br />
+          <% end -%>
+        </div>
+      
+
+      </div>
+    </div>
+  </div>
 </div>
 
 
-<%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
-  <%= link_to "Olvide mi contraseña", new_password_path(resource_name) %><br />
-<% end -%>
 
 <%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
   <%= link_to "Didn't receive confirmation instructions?", new_confirmation_path(resource_name) %><br />
