--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,11 +10,11 @@
 <body class="content">
 
 <header>
-    <nav class="navbar navbar-static-top navbar-inverse " role=navigation>
-        <div class="container">
-            <div class="navbar-header  text-right ">
+    <nav class="navbar navbar-static-top navbar-inverse" role=navigation>
+        <div class="container  ">
+            <div class="navbar-header   ">
 
-                <button type="button" class="navbar-toggle text-center collapsed " data-toggle="collapse" data-target="#navegacion">
+                <button type="button" class="navbar-toggle  collapsed " data-toggle="collapse" data-target="#navegacion">
                 
                     <span class="sr-only">Desplegar / Ocultar Menu</span>
                     <span class="icon-bar"></span>
@@ -32,13 +32,13 @@
             </div>
             
             
-            <div class="collapse navbar-collapse " id="navegacion">
+            <div class="collapse navbar-collapse text-center" id="navegacion">
                 <ul class="nav navbar-nav  ">
                     
                     <li><a <%=link_to "Blog", articles_path %> </li>
                     <li><a <%=link_to "Contacto", contact_path %> </li>
                     
-                    <li class="dropdown">
+                    <li class="dropdown ">
 
                         <%if user_signed_in? and current_user.is_admin?   %>
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">
@@ -53,7 +53,7 @@
                         
                     </li>
                     
-                    <li class="text-right">      
+                    <li class="dropdown">      
                         <%if user_signed_in? %>
                             <li>
                                 <%= link_to "Cerrar Sesion", destroy_user_session_path, method: :delete %> 
@@ -94,7 +94,7 @@
 
 
 
-<footer class="footer ">
+<footer class="footer bs-docs-footer ">
     <div class=" container-fluid list-inline">
         <div class="col-xs-6">
              <li><a <%=link_to "<D/B>", index_path %> </li>
