--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
   <%= csrf_meta_tags %>
   
 </head>
-<body class="content">
+<body class=" content" >
 
 <header>
     <nav class="navbar navbar-static-top navbar-inverse" role=navigation>
@@ -35,8 +35,8 @@
             <div class="collapse navbar-collapse text-center" id="navegacion">
                 <ul class="nav navbar-nav  ">
                     
-                    <li><a <%=link_to "Blog", articles_path %> </li>
-                    <li><a <%=link_to "Contacto", contact_path %> </li>
+                    <li> <%=link_to "Blog", articles_path %> </li>
+                    <li> <%=link_to "Contacto", contact_path %> </li>
                     
                     <li class="dropdown ">
 
