--- a/app/views/welcome/contact.html.erb
+++ b/app/views/welcome/contact.html.erb
@@ -3,11 +3,13 @@
     
     <section class="main text-center container">
         <div class="row">
-                    
+         <div class=" jumbotron">
             <H4>CONTACTA CON NOSOTROS</H4>
             <div class= "contact ">
-            <H1 class="container">dplb.mx@gmail.com</H1>
+                <H1 class="container">dplb.mx@gmail.com</H1>
             </div> 
+         </div>       
+            
 
             <br>
 <!-- 
