--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -8,10 +8,12 @@
                     </div>
                         <div class="absolute article-height background-cover" style="background:rgba(0,0,0,0.5);top:0px;left:0px;width:100%;">
                     </div>         
-                    <div class="relative  text-center">
+                    <div class="relative be-grey text-center">
+                         
                             <h2 class="blue" ><%=link_to article.title, article, class:"title" %></h2><br>
+                        
                             <p class="be-grey text-center">
-                                <%= truncate(article.body ,length:50,escape: false ) %> 
+                                <%= truncate(article.body, class:"be-grey" ,length:50,escape:false) %> 
                             </p> 
                     </div>
                 </div>
@@ -19,7 +21,7 @@
             </div>
         <%end%>   
     </div>
-    <div class="top-space text-center">
-        <%= will_paginate @articles , renderer: BootstrapPagination::Rails %> 
+    <div class="top-space text-center"> 
+        <%= will_paginate @articles, renderer: BootstrapPagination::Rails, class:" pagination ", :previous_label => t("<< Atrás"), :next_label => t("siguiente >>")  %>
     </div>
 </div>
