--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,6 +1,6 @@
 <artticle>
     <header class="text-right be-small">
-        <%= time_ago_in_words(comment.created_at) %> ago - <%= link_to "Borrar" , [@article,comment], class:"black" , method: :delete  %>
+        <%= time_ago_in_words(comment.created_at) %> - <%= link_to "Borrar" , [@article,comment], class:"black" , method: :delete  %>
     </header>
     <div class="row" >
         <div class="col-xs-1 col-md-1">
