--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -13,7 +13,7 @@
   
   <div class="field">
     <%= f.label :body, class:"hidden" %><br>
-    <%= f.text_area :body, class:" form-control", rows:"3"%>
+    <%= f.text_area :body, class:" form-control"%>
   </div>
   <br>
   <div class="   text-center">
