--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -8,7 +8,7 @@
         <div class="text-center form-group">
           <div class="main-container">
             <div>
-              <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+              <%= form_for(resource, as: resource_name, url: registration_path(resource_name),html: => {id: => "sign_up_user"}, format: => json: , remote: => true ) do |f| %>
                 <%= devise_error_messages! %>
             </div>
               
