--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,25 +1,45 @@
-<h2>Change your password</h2>
+<div class="row  jumbotron">
+  <div class="main-container col-xs-12">
+    <div class="box">
+      <div classs="" >
+        <h1 class="  text-center col-xs-12">Cambia tu contraseña</h1>
+      </div> 
+      <div cloass="container form-group ">
+        <div class="text-center form-group">
+          <div class="main-container">
+            <div>
+              <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
+                <%= devise_error_messages! %>
+                <%= f.hidden_field :reset_password_token %>
+            </div>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
-  <%= devise_error_messages! %>
-  <%= f.hidden_field :reset_password_token %>
+            <div class="field text-left">
+              <h5><%= f.label :password, "Nueva contraseña"%>
+              <% if @minimum_password_length %>
+                (<%= @minimum_password_length %> caracteres minumo)</h5>
+              <% end %>
+              <%= f.password_field :password, autofocus: true, autocomplete: "off", class:"form-group col-xs-12" %>
+            </div>
 
-  <div class="field">
-    <%= f.label :password, "New password" %><br />
-    <% if @minimum_password_length %>
-      <em>(<%= @minimum_password_length %> characters minimum)</em><br />
-    <% end %>
-    <%= f.password_field :password, autofocus: true, autocomplete: "off" %>
+            <div class="field">
+              <%= f.label :password_confirmation, "Confirmar contraseña", class:" col-md-4  col-xs-12 text-left"  %><br />
+              <%= f.password_field :password_confirmation, autocomplete: "off", class:"form-group col-xs-12" %>
+            </div>
+
+            <div class="box">
+              <div class="actions text-left col-xs-12 top-space ">
+                <%= f.submit "Cambiar mi contraseña", class:"btn btn-login btn-lg btn-block" %>
+              </div>
+            </div>
+            <% end %>
+
+            <div class="col-xs-12 btn-lg btn-login-1">
+              <%= render "devise/shared/links" %>
+            </div>  
+
+          </div>  
+        </div>
+      </div>
+    </div>
   </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation, "Confirm new password" %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Change my password" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
