--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -39,9 +39,11 @@
                 </div>                
               </div>
             <% end %>
-            <div class="col-xs-12 btn-lg btn-login-1">
-              <%= render "devise/shared/links" %>
+
+            <div class="col-xs-12 btn-lg ">
+              <%= render "devise/shared/links"%>
             </div>
+
           </div>  
         </div>
       </div>
