--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -33,10 +33,9 @@
             </div>
             <% end %>
 
-            <div class="col-xs-12 btn-lg btn-login-1">
+            <div class="col-xs-12 btn-lg ">
               <%= render "devise/shared/links" %>
             </div>  
-
           </div>  
         </div>
       </div>
