--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,33 @@
-<h2>¿Olvidaste tu contraseña?</h2>
-
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= devise_error_messages! %>
-
-  <div class="field">
-    <%= f.label :email %> <br />
-    <%= f.email_field :email, autofocus: true %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Se enviaran instrucciones para una nueva contraseña" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+<div class="row  jumbotron">
+	<div class="main-container col-xs-12">
+		<div class="box">
+			<div classs="">
+				<h1 class="text-center col-xs-12">¿Olvidaste tu contraseña?</h1>
+				</div> 
+				<div cloass="container form-group ">
+					<div class="text-center form-group">
+						<div class="main-container">
+							<div>
+								<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+								<%= devise_error_messages! %>
+							</div>
+							<div class="field">
+								<%= f.label :email %> <br />
+								<%= f.email_field :email, autofocus: true, class:"form-group col-xs-12" %>
+							</div>
+							<br>
+							<div class="actions">
+								<h4>Se enviaran instrucciones para una nueva contraseña</h4>
+								<%= f.submit "Enviar", class:"btn btn-login btn-lg btn-block" %>
+							</div>
+							<% end %>
+							<div class="col-xs-12 btn-lg ">
+								<%= render "devise/shared/links" %>
+							</div>
+						</div> 
+					</div>  
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
