--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,29 +1,49 @@
-<%- if controller_name != 'sessions' %>
-  <%= link_to "Tengo una cuenta", new_session_path(resource_name) %><br />
-<% end -%>
-
-
 <div class="row">
-  <div class="box  ">
-    <div class=" col-xs-12 "> 
-      <div class=" btn-lg ">
 
-        <div class="col-xs-6 " >
-          <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-          <%= link_to "Crear Cuenta", new_registration_path(resource_name) %><br />
-          <% end -%>  
+        <div class="btn-lg col-xs-12 " >
+
+          <div class=" col-xs-6 " >          
+            <%- if controller_name != 'sessions' %>
+              <%= link_to "Tengo una cuenta", new_session_path(resource_name), class:"btn btn-login btn-lg btn-block" %>
+            <% end -%>
+
+            <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
+              <%= link_to "Olvide mi contraseña", new_password_path(resource_name), class:"btn btn-login btn-lg btn-block" %>
+            <% end -%>
+          </div>
+
+          <div class=" col-xs-6  " >
+            <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
+            <%= link_to "Crear Cuenta", new_registration_path(resource_name), class:"btn btn-login btn-lg btn-block" %>
+            <% end -%>  
+          </div>
+
         </div>
-              
-        <div class="col-xs-6 " >
-          <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
-            <%= link_to "Olvide mi contraseña", new_password_path(resource_name) %><br />
+
+        <div class="btn-lg col-xs-12 " >
+          <%- if devise_mapping.omniauthable? %>
+
+          <div class=" col-xs-6 " > 
+              <%= link_to "Facebook", user_omniauth_authorize_path(:facebook), class:"btn btn-block btn-social btn-facebook" %>
+          </div> 
+
+          <div class=" col-xs-6 " > 
+              <%= link_to "Twitter", user_omniauth_authorize_path(:twitter), class:"btn btn-block btn-social btn-twitter" %> 
+            
+          </div>
+
+<%
+=begin %>
+            <%- resource_class.omniauth_providers.each do |provider| %>
+              <%= link_to " #{OmniAuth::Utils.camelize(provider)}", omniauth_authorize_path(resource_name, provider) %>
+            <% end -%>
+<%
+=end %>
+
           <% end -%>
         </div>
-      
 
-      </div>
-    </div>
-  </div>
+
 </div>
 
 
@@ -36,8 +56,3 @@
   <%= link_to "Didn't receive unlock instructions?", new_unlock_path(resource_name) %><br />
 <% end -%>
 
-<%- if devise_mapping.omniauthable? %>
-  <%- resource_class.omniauth_providers.each do |provider| %>
-    <%= link_to "Entrar con #{OmniAuth::Utils.camelize(provider)}", omniauth_authorize_path(resource_name, provider) %><br />
-  <% end -%>
-<% end -%>
