--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -92,18 +92,15 @@
 </section>
 
 
-
-
-
 <footer class="footer bs-docs-footer ">
     <div class=" container-fluid list-inline">
         <div class="col-xs-6">
-             <li><a <%=link_to "<D/B>", index_path %> </li>
+             <li><a <%=link_to "<D/B>", index_path,class:"btn-login" %> </li>
         </div>
         <div class=" col-xs-6">
             <ul class=" list-inline text-right">
                  
-                 <li><a <%=link_to "Contacto", contact_path %> </li>
+                 <li><a <%=link_to "Contacto", contact_path,class:"btn-login" %> </li>
             </ul>
         </div>
     </div>
