--- a/app/views/users/finish_signup.html.erb
+++ b/app/views/users/finish_signup.html.erb
@@ -1,22 +1,37 @@
-<h1>Confirma tu Email</h1>
- 
-<%= form_for(current_user, as: 'user', url: finish_signup_path(current_user)) do |f| %>
-  <% if @show_errors && current_user.errors.any? %>
-    <h2>Errores encontrados:</h2>
-    <ul>
-      <% current_user.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-    </ul>
-  <% end %>
- 
-  <div>
-    <%= f.label :email %>
-    <%= f.text_field :email, autofocus: true, value: '', placeholder: 'Example: email@me.com' %>
+<div class="row  jumbotron">
+  <div class="main-container col-xs-12">
+    <div class="box">
+      <div classs="" >
+        <h1 class="  text-center col-xs-12">Confirma tu Email</h1>
+      </div> 
+      <div cloass="container form-group ">
+        <div class="text-center form-group">
+          <div class="main-container">
+            <div>                 
+              <%= form_for(current_user, as: 'user', url: finish_signup_path(current_user)) do |f| %>
+                <% if @show_errors && current_user.errors.any? %>
+                  <h2>Errores encontrados:</h2>
+                  <ul>
+                    <% current_user.errors.full_messages.each do |msg| %>
+                      <li><%= msg %></li>
+                    <% end %>
+                  </ul>
+                <% end %>
+            </div>
+
+            <div class="field text-left">
+              <%= f.label :email %>
+              <%= f.text_field :email, autofocus: true, value: '', placeholder: 'Example: email@me.com', class:"form-group col-xs-12"  %>
+            </div>
+           
+            <div class="box">
+              <%= f.submit 'Confirmar', class:"btn btn-login btn-lg btn-block" %>
+            </div>
+           
+            <% end %>
+          </div>  
+        </div>
+      </div>
+    </div>
   </div>
- 
-  <div>
-    <%= f.submit 'Confirmar' %>
-  </div>
- 
-<% end %>
+</div>
