--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,14 +1,17 @@
-<h1><i class="fa fa-heart "></i></h1>
+<div class="row  jumbotron">
+	<div classs="" >
+		<h1 class="text-center col-xs-12 f ">Intro  D/B </h1>
+	</div> 
+		<div class="text-center col-xs-12 "> 
+			<div class="col-xs-6  ">
+				<h2 class="text-justify f col-xs-9"><a href="https://www.youtube.com/channel/UCUSRKM3TMIgd_c7r2xf-sAA"> Entra al canal</a> Un blog donde hablamos de desarrollo y todas las cosas que nos pasan mientras intentamos crear un producto.</h2>
+			</div>
+			<div class="text-center col-xs-6  ">
+				<h2 class=" f ">Hablando de guithub</h2>
+			<div class="embed-responsive embed-responsive-4by3">
+				<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/ZloUwNwcfPc" frameborder="0" allowfullscreen></iframe>
+			</div>
+		</div>
 
-<h2 class="text-justify">Intro de D/B, <a href="https://www.youtube.com/channel/UCUSRKM3TMIgd_c7r2xf-sAA"> entra al canal</a> Un blog donde hablamos de desarrollo y todas las cosas que nos pasan mientras intentamos crear un producto.</h2>
 
-<div class="container text-center">
-  <div class="row">
-    <div class="col-sm-12">
-      <h2>Hablando de guithub</h2>
-<div class="embed-responsive embed-responsive-4by3">
-    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/ZloUwNwcfPc" frameborder="0" allowfullscreen></iframe>
-</div>
-    </div>
-  </div>
 </div>
