envio de email en contacto

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,7 +36,7 @@
                 <ul class="nav navbar-nav  ">
                     
                     <li> <%=link_to "Blog", articles_path %> </li>
-                    <li> <%=link_to "Contacto", contact_path %> </li>
+                    <li> <%=link_to "Contactanos", send_path %> </li>
                     
                     <li class="dropdown ">
 
