correcion de errores en contacto

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -58,6 +58,10 @@
 .field {
     margin-top: 1em;
 }
+.textarea {
+    overflow: scroll;
+    height: 100px;
+}
 .grey{
 	color: #10213E!important;
 }
