--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -9,7 +9,7 @@
           <div class="main-container">
             <div>
               <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-                <%= devise_error_messages! %>
+            <!--    <%= devise_error_messages! %> -->
             </div>
               
             <div class="field ">
