--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -17,6 +17,6 @@
   </div>
   <br>
   <div class="   text-center">
-    <%= f.submit "Enviar", class:"btn  btn-coment btn-primary "%>
+    <%= f.submit "Enviar", class:"btn  btn-coment btn-primary col-xs-12"%>
   </div>
 <% end %>
