--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -2,15 +2,16 @@
 	<div classs="" >
 		<h1 class="text-center col-xs-12 f ">Intro  D/B </h1>
 	</div> 
-		<div class="text-center col-xs-12 "> 
-			<div class="col-xs-6  ">
-				<h2 class="text-justify f col-xs-9"><a href="https://www.youtube.com/channel/UCUSRKM3TMIgd_c7r2xf-sAA"> Entra al canal</a> Un blog donde hablamos de desarrollo y todas las cosas que nos pasan mientras intentamos crear un producto.</h2>
-			</div>
-			<div class="text-center col-xs-6  ">
-				<h2 class=" f ">Hablando de guithub</h2>
-			<div class="embed-responsive embed-responsive-4by3">
-				<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/ZloUwNwcfPc" frameborder="0" allowfullscreen></iframe>
-			</div>
+		<div class="col-md-6  ">
+			<h2 class="text-justify f  "><a href="https://www.youtube.com/channel/UCUSRKM3TMIgd_c7r2xf-sAA"> Entra al canal</a> Un blog donde hablamos de desarrollo y todas las cosas que nos pasan mientras intentamos crear un producto.</h2>
+		</div>
+
+		<br>
+
+		<div class="text-center col-xs-12  col-md-6">
+			<h2 class=" f ">Hablando de guithub</h2>
+		<div class="embed-responsive embed-responsive-4by3">
+			<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/ZloUwNwcfPc" frameborder="0" allowfullscreen></iframe>
 		</div>
 
 
