--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,6 +1,6 @@
 <article class="bottom-space">
-    <div class="text-center">
-        <%= article_cover   @article.cover.url%>
+    <div class=" ">
+        <%= article_cover   @article.cover.url, class:""%>
     </div>
 
     <div class="row text-center">
