--- a/app/views/welcome/dashboard.html.erb
+++ b/app/views/welcome/dashboard.html.erb
@@ -1,5 +1,10 @@
+<div class="row  container">
+  <div class="main-container col-xs-12">
+    <div class="box">    
+
+
 <% @articles.each do |article| %>
-    <h1><%= link_to article.title, article %></h1>
+    <h3><%= link_to article.title, article %></h3>
     <div>
         <%= truncate(article.body ,length:250,escape: false)%> - <%= link_to "Eliminar", article, method: :delete %> - 
         <% if article.may_publish?%>
@@ -7,3 +12,7 @@
         <%end%>
     </div>
 <%end%>
+
+   </div>
+  </div>
+</div>   
