--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -55,6 +55,20 @@
 .be-grey{
 	color: #FBE9E9 !important;
 }
+
+.bverde{
+ color: #090;
+}
+.bazul{
+	color: #069;
+}
+.verde{
+ color: #090;
+}
+.azul{
+	color: #069;
+}
+
 .field {
     margin-top: 1em;
 }
